Fixed truncated dropdown menu (#1138)
* removing padding-right from discord button in nav

* fixing dropdown menu on contributing page for sub-articles

* Revert "fixing dropdown menu on contributing page for sub-articles"

This reverts commit 2d158ddbb8f1d27dd7d8b0b9282554365cf042e3.

* fixing dropdown menu on contributing page for sub-articles

* Revert "removing padding-right from discord button in nav"

This reverts commit e6642932611de307f5386928be0a1dd7e94cd134.

* lint fix

* fixing dropdown menu for mobile screen

* Update pydis_site/static/css/content/page.css


---------

--- a/pydis_site/static/css/content/page.css
+++ b/pydis_site/static/css/content/page.css
@@ -10,6 +10,11 @@
     #edit-on-github {
         display: none;
     }
+
+   .dropdown-menu {
+        left: unset;
+        right: 0;
+    }
 }
 
 i.has-icon-padding {
@@ -95,4 +100,13 @@ ul.menu-list.toc {
  */
 li img {
     margin-top: 0.5em;
+}
+
+.dropdown-menu {
+    min-width: 15rem;
+}
+
+a.dropdown-item {
+    white-space: normal;
+    padding-right: 0;
 }
